fix!: viewport now stays in view on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -1,8 +1,9 @@
 html,
 body {
+    position: fixed;
     overflow: clip;
-    width: 100lvw;
-    height: 100lvh;
+    width: 100dvw;
+    height: 100dvh;
     padding: 0px;
     margin: 0px;
 }
@@ -17,22 +18,24 @@ img {
 
 #background {
     position: absolute;
+    overflow: clip;
     left: 0px;
-    top: 0px;
+    bottom: 0px;
     width: 100%;
     height: 100%;
 }
 
 #background>div {
+    position: absolute;
     display: block;
+    bottom: 0px;
     width: 100%;
     height: 100%;
-    position: absolute;
-    bottom: 0px;
 }
 
 #background>div>img {
     position: absolute;
+    bottom: 0px;
     width: 1024px;
     height: 1024px;
     image-rendering: pixelated;
